Cambios grandes al proyecto: arreglos visuales; gama parecida al SGE, agregado dela función de NAVEGAR por la página, creación de JSON con clicks, ruleta funcionando por primera vez desde la migración a TS pero de una forma mucho mas estable, eliminación del middleware de aplicación para sustituirlo con la función principal, añadido de funcionalidades, los JSON pueden guardar el ID de una comisión y retenerlo, aunque se puede resetear. Las rutas se ampliaron, la navegación ahora recorre una serie de páginas que hacen el proceso. Los arreglos visuales incluyen distintas vistas, centralizadas pero efectivas y el arreglo de los CSS (hay un css global) que mantiene la estética. La página ahora permite adjuntar archivos .csv o .xls y los añade a la pantalla inicial

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,14 +1,11 @@
-body {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-h3 {
+main form h3 {
     width: 30vw;
     text-align: center;
 }
 input[type="checkbox"] {
     display: none;
 }
-form {
+form#assists {
     display: flex;
     flex-direction: column;
 }
