Arreglos visuales menores, se agrega plenamente la funcionalidad de busqueda por comisión (nombre parcial y nombre completo), vista nueva que corresponde con esa funcionalidad

--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -3,6 +3,6 @@
     <ul>
         <li><a href="/convert">Archivos para convertir</a></li>
         <li><a href="/list">JSON</a></li>
-        <li><a>Buscador por comisión (proximamente)</a></li>
+        <li><a href="/listByCom">Buscador por comisión (proximamente)</a></li>
     </ul>
 </div>
