--- a/src/views/roulette.ejs
+++ b/src/views/roulette.ejs
@@ -7,12 +7,20 @@
             <%- include("./partials/sidebar.ejs") %> 
             <input type="button" value="Girar" style="float:left;" id='spin' />
             <canvas id="canvas" width="500" height="500"></canvas>
-            
-            <script>
-                let alumnos = "<%= myData %>".split(",");
-                var options = []
-                alumnos.forEach((a,index) => options.push(index+1))
+            <form action="/roulette/<%= com %>" method="post" id="winform">
+                <button id="reset" type="submit">Reiniciar</button>
+                <input type="hidden" name="winner" id="winner" value="none">
+                <% let ids = myData.map(a => {return a.id}) %>
+                <% for( let i = 0; i < ids.length; i++ ) { %>
+                    <input type="hidden" name="statusfor<%= ids[i] %>" value="active">
+                <% } %>
+            </form>
 
+            <script>
+                let ids = "<%= myData.map(a => {return a.id}) %>".split(",");
+                let alumnos = "<%= myData.map(a => {return a.name}) %>".split(",");
+                var options = [];
+                alumnos.forEach((a,index) => options.push(index+1))
                 var startAngle = 0;
                 var arc = Math.PI / (options.length / 2);
                 var spinTimeout = null;
@@ -121,6 +129,11 @@
                 spinTimeout = setTimeout('rotateWheel()', 30);
                 }
 
+                function winner(name) {
+                    let form = document.getElementById("winform")
+                    document.getElementById("winner").value = name
+                }
+
                 function stopRotateWheel() {
                 clearTimeout(spinTimeout);
                 var degrees = startAngle * 180 / Math.PI + 90;
@@ -128,17 +141,18 @@
                 var index = Math.floor((360 - degrees % 360) / arcd);
                 ctx.save();
                 ctx.font = 'bold 24px Helvetica, Arial';
+                var selected = 0
                 var text = alumnos[options[index]-1]
+                var selectedId = ids[options[index]-1]
                 ctx.fillText(text, 250 - ctx.measureText(text).width / 2, 250 + 10);
                 ctx.restore();
+                winner(selectedId);
                 }
-
                 function easeOut(t, b, c, d) {
                 var ts = (t/=d)*t;
                 var tc = ts*t;
                 return b+c*(tc + -3*ts + 3*t);
                 }
-
                 drawRouletteWheel();
             </script>
         </main>
